# kafi-kaesseli

./: .gitignore  Cargo.toml  products.toml
.github/: CODEOWNERS
.github/workflows/: deploy.yml  main.yml
src/: main.rs  product_data_provider.rs
